8242455: [lworld] C1 compilation fails with assert "should have same type"